--- a/.gitignore
+++ b/.gitignore
@@ -128,3 +128,10 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+# Indicates which folders and files Git should ignore
+# dist/
+.DS_Store
+DS_Store
+# .node_modules
+# node_modules
